--- a/templates/default/gallery.css
+++ b/templates/default/gallery.css
@@ -50,3 +50,134 @@ header .flexbox li {margin:0 0.5em;}
 #action_status_message {padding:1em 1em 0;margin:1em auto;background:rgba(210,210,210,0.5);width:100%;font-size:1.4em;}
 
 
+/** ===== Pagination ===== **/
+.pagination_style
+{
+padding-top:10px;
+padding-bottom:10px;
+text-align: center;
+}
+.pagination-button {
+color: #6e6e6e;
+font: bold 12px Helvetica, Arial, sans-serif;
+text-decoration: none;
+padding: 5px 18px;
+position: relative;
+display: inline-block;
+-webkit-transition: border-color .218s;
+-moz-transition: border .218s;
+-o-transition: border-color .218s;
+transition: border-color .218s;
+background: #f3f3f3;
+background: -webkit-gradient(linear,0% 40%,0% 70%,from(#F5F5F5),to(#F1F1F1));
+background: -moz-linear-gradient(linear,0% 40%,0% 70%,from(#F5F5F5),to(#F1F1F1));
+border: solid 1px #dcdcdc;
+border-radius: 4px;
+-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+margin-right: 10px;
+line-height: 20px;
+}
+.pagination-button:hover {
+color: #333;
+border-color: #999;
+-moz-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.2) -webkit-box-shadow:0 2px 5px rgba(0, 0, 0, 0.2);
+box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+}
+.pagination-button:active {
+color: #000;
+border-color: #444;
+}
+.left {
+-webkit-border-top-right-radius: 0;
+-moz-border-radius-topright: 0;
+border-top-right-radius: 0;
+-webkit-border-bottom-right-radius: 0;
+-moz-border-radius-bottomright: 0;
+border-bottom-right-radius: 0;
+margin: 0;
+}
+.buttonDisabled {
+color: #6e6e6e;
+font: bold 12px Helvetica, Arial, sans-serif;
+text-decoration: none;
+padding: 5px 18px;
+position: relative;
+display: inline-block;
+-webkit-transition: border-color .218s;
+-moz-transition: border .218s;
+-o-transition: border-color .218s;
+transition: border-color .218s;
+background: #f3f3f3;
+background: -webkit-gradient(linear,0% 40%,0% 70%,from(#F5F5F5),to(#F1F1F1));
+background: -moz-linear-gradient(linear,0% 40%,0% 70%,from(#F5F5F5),to(#F1F1F1));
+border: solid 1px #dcdcdc;
+border-radius: 4px;
+-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+margin-right: 10px;
+line-height: 20px;
+}
+.leftDisabled {
+-webkit-border-top-right-radius: 0;
+-moz-border-radius-topright: 0;
+border-top-right-radius: 0;
+-webkit-border-bottom-right-radius: 0;
+-moz-border-radius-bottomright: 0;
+border-bottom-right-radius: 0;
+margin: 0;
+}
+.middle {
+border-radius: 0;
+-webkit-border-radius: 0;
+-moz-border-radius: 0;
+border-left: solid 1px #f3f3f3;
+margin: 0;
+border-left: solid 1px rgba(255, 255, 255, 0);
+}
+.middleCurrent {
+border-radius: 0;
+-webkit-border-radius: 0;
+-moz-border-radius: 0;
+border-left: solid 1px #f3f3f3;
+margin: 0;
+border-left: solid 1px rgba(255, 255, 255, 0);
+background: #dcdcdc;
+}
+.middle:hover {
+-webkit-border-top-left-radius: 0;
+-moz-border-radius-topleft: 0;
+border-top-left-radius: 0;
+-webkit-border-bottom-left-radius: 0;
+-moz-border-radius-bottomleft: 0;
+border-bottom-left-radius: 0;
+}
+.right {
+-webkit-border-top-left-radius: 0;
+-moz-border-radius-topleft: 0;
+border-top-left-radius: 0;
+-webkit-border-bottom-left-radius: 0;
+-moz-border-radius-bottomleft: 0;
+border-bottom-left-radius: 0;
+margin: 0;
+border-left: solid 1px #f3f3f3;
+}
+.right:hover {
+-webkit-border-top-left-radius: 0;
+-moz-border-radius-topleft: 0;
+border-top-left-radius: 0;
+-webkit-border-bottom-left-radius: 0;
+-moz-border-radius-bottomleft: 0;
+border-bottom-left-radius: 0;
+margin: 0;
+}
+.rightDisabled {
+-webkit-border-top-left-radius: 0;
+-moz-border-radius-topleft: 0;
+border-top-left-radius: 0;
+-webkit-border-bottom-left-radius: 0;
+-moz-border-radius-bottomleft: 0;
+border-bottom-left-radius: 0;
+border-left: 0px;
+}
+/** ===== End Pagination ===== **/
